# construcute-app

./: .eslintrc.cjs  .prettierrc  README.md  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  project.md  tsconfig.json
.github/workflows/: ci.yml  deploy-api.yml
.history/: .gitignore_20260225125608  project_20260224105317.md
.history/apps/mobile/: package_20260224125741.json
apps/admin/: .env.local  package-lock.json  package.json  tsconfig.json
apps/admin/.next/: trace
apps/admin/app/: layout.tsx  page.tsx
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/application/ports/: ai.py  media.py  repositories.py
apps/api/app/application/use_cases/: admin_stages.py  ai.py  checks_notes_media.py  projects.py  stages.py
apps/api/app/domain/: entities.py
apps/api/app/infrastructure/: ai_stub.py  media_s3.py  repositories.py
apps/api/app/infrastructure/db/: __init__.py  models.py  seed.py
apps/api/app/tests/unit/: test_create_project.py
apps/api/app/web/: admin.py  checks.py  dependencies.py  media.py  notes.py  projects.py  stages.py
apps/api/tests/: __init__.py  test_migrations_integration.py
apps/mobile/: App.tsx  babel.config.js  package-lock.json  package.json  tsconfig.json
infra/: main.tf  variables.tf
infra/modules/compute/: main.tf  variables.tf
infra/modules/database/: main.tf  variables.tf
infra/modules/network/: main.tf
infra/modules/storage/: main.tf  variables.tf
(+18 files in other folders)
