[tool.poetry]
name = "constructure-api"
version = "0.1.0"
description = "Home Building Companion App API (FastAPI monolith)"
authors = ["Constructure App"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg = { extras = ["binary"], version = "^3.2.0" }
python-dotenv = "^1.0.0"
boto3 = "^1.35.0"
httpx = "^0.27.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.13.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
types-boto3 = "^1.0.0"
types-requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "B", "UP"]
ignore = []
exclude = [
    ".venv",
    ".git",
    "__pycache__",
]

[tool.mypy]
python_version = "3.13"
plugins = []
exclude = [
    "^tests/.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

